fix spacing single project + header

--- a/src/styles/partials/views/_single_project.scss
+++ b/src/styles/partials/views/_single_project.scss
@@ -1,8 +1,8 @@
 @use "../variables" as *;
 
 .single_project {
-    min-height: calc(100vh - 100px);
-    padding-top: 86px;
+    min-height: calc(100vh - 40px);
+    padding-top: 48px;
 
     background: rgb(255, 255, 255);
     background: radial-gradient(circle, rgba(255, 255, 255, 1) 3%, rgba(255, 255, 255, 1) 5%, rgba(228, 228, 228, 1) 100%);
